--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.8,<3.11"
 defusedxml = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
-demisto-sdk = "1.29.2"
+demisto-sdk = {git = "https://github.com/demisto/demisto-sdk.git", rev="d42bfb98d224a077ad4ac1a26924ac329cc13c79"}
 requests = "^2.22.0"
 pre-commit = "^3.5.0"
 dateparser = "^1.1.8"
