--- a/Packs/CortexXDR/Integrations/CortexXDRIR/CortexXDRIR.yml
+++ b/Packs/CortexXDR/Integrations/CortexXDRIR/CortexXDRIR.yml
@@ -292,6 +292,9 @@ script:
     - defaultValue: 'False'
       description: Return data only if the incident was changed since the last time it was mirrored into Cortex XSOAR.  This flag should be used only from within a Cortex XDR incident.
       name: return_only_updated_incident
+    - defaultValue: 'True'
+      description: Return data only without nulls values.
+      name: drop_nulls
     description: Returns additional data for the specified incident, for example, related alerts, file artifacts, network artifacts, and so on.
     name: xdr-get-incident-extra-data
     outputs:
