--- a/.github/workflows/create-dfir-channel.yml
+++ b/.github/workflows/create-dfir-channel.yml
@@ -21,7 +21,7 @@ jobs:
             is_mp_contrib=false
         fi
 
-        echo "is_mp_contrib=$is_mp_contrib" >> $GITHUB_OUTPUTS
+        echo "is_mp_contrib=$is_mp_contrib" >> "$GITHUB_OUTPUT"
     outputs:
       is_mp_contrib: ${{ steps.get_is_mp_contrib.outputs.is_mp_contrib }}
 
@@ -39,7 +39,7 @@ jobs:
           exit 0
         else
           contributor_gh_username=${{ github.event.pull_request.user.login }}
-          echo "contributor_gh_username=$contributor_gh_username" >> $GITHUB_OUTPUTS
+          echo "contributor_gh_username=$contributor_gh_username" >> "$GITHUB_OUTPUTS"
         fi
     outputs:
       contributor_gh_username: ${{ steps.get_contributor_gh_username.outputs.contributor_gh_username }}
