--- a/.github/workflows/create-dfir-channel.yml
+++ b/.github/workflows/create-dfir-channel.yml
@@ -7,6 +7,15 @@ on:
 
 jobs:
 
+  checkout:
+    runs-on: ubuntu-latest
+    name: Checkout Repo
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        sparse-checkout: .github
+
   is_mp_contrib:
     if: github.event.label.name == 'Contribution Form Filled'
     runs-on: ubuntu-latest
