--- a/.github/workflows/create-dfir-channel.yml
+++ b/.github/workflows/create-dfir-channel.yml
@@ -12,10 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Is PR Marketplace Contribution
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        sparse-checkout: .github
     - name: Is PR Marketplace Contribution?
       id: get_is_mp_contrib
       run: |
@@ -25,7 +21,8 @@ jobs:
             is_mp_contrib=false
         fi
 
-        echo "is_mp_contrib=$is_mp_contrib" >> "$GITHUB_OUTPUT"
+        echo "is_mp_contrib=$is_mp_contrib" | tee -a "$GITHUB_OUTPUT"
+        cat $GITHUB_OUTPUT
     outputs:
       is_mp_contrib: ${{ steps.get_is_mp_contrib.outputs.is_mp_contrib }}
 
@@ -35,10 +32,6 @@ jobs:
     needs: is_mp_contrib
     name: Get Contributor GitHub Username
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        sparse-checkout: .github
     - name: Get Contributor GitHub Username
       id: get_contributor_gh_username
       run: |         
@@ -49,6 +42,7 @@ jobs:
           contributor_gh_username="${{ github.event.pull_request.user.login }}"
         fi
 
-        echo "contributor_gh_username=$contributor_gh_username" >> "$GITHUB_OUTPUT"
+        echo "contributor_gh_username=$contributor_gh_username" | tee -a "$GITHUB_OUTPUT"
+        cat $GITHUB_OUTPUT
     outputs:
       contributor_gh_username: ${{ steps.get_contributor_gh_username.outputs.contributor_gh_username }}
